# cdefgab

./: Cargo.toml  canonc.xml  cdefgab-2ef4cc2130428609.js  cdefgab-3e994b4b6102920f.js  greensleeves.xml  index.html  partida.xml  tempaudio.txt  test_music.xml  todo.md
.github/workflows/: pages.yml
src/: main.rs
src/audio/: audio.rs  audio_listener.rs  audio_player.rs  mod.rs
src/audio_listener/: audio_listener.rs  mod.rs
src/audio_player/: audio_player.rs  mod.rs
src/gui/: gui.rs  mod.rs
src/guitar/: guitar.rs
src/karplus_strong/: karplus_strong.rs  mod.rs
src/music_representation/: mod.rs  musical_structures.rs  musical_structures_tests.rs  musicxml_parser.rs  utils.rs
src/renderer/: mod.rs  renderer.rs
src/time_scrubber/: mod.rs  time_scrubber.rs  time_scrubber_tests.rs
