[package]
name = "cdefgab"
version = "0.1.0"
edition = "2021"

[dependencies]
augurs-dtw = "0.5.3"
roxmltree = { version = "0.20" }
tempfile = "3.3.0"
regex = { version = "1.11.1" }
eframe = { version = "0.29.1" }
egui = { version = "0.29.1" }
egui_plot = { version = "0.29" }
egui_file = { version = "0.19" }
cpal = { version = "0.15.3" }
rand = "0.8"
rustfft = { version = "6.2.0" }
