[package]
name = "cdefgab"
version = "0.1.0"
edition = "2021"

[dependencies]
# Common dependencies
augurs-dtw = "0.5.3"
roxmltree = "0.20"
tempfile = "3.3.0"
regex = "1.11.1"
eframe = { version = "0.29.1" }
egui = "0.29.1"
egui_plot = "0.29"
egui_file = "0.19"
rand = "0.8"
rustfft = "6.2.0"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
rfd = "0.15.1"

# Conditional dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kira = { version = "0.9.6", features = ["symphonia"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
kira = { version = "0.9.6", features = ["symphonia"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["AudioContext", "HtmlCanvasElement"] }
js-sys = "0.3"
log = { version = "0.4" }
